# ios-uikit-squad-generator-xib

./: .bazelrc  .gitignore  MODULE.bazel  Podfile  README.md  bazel-bin  bazel-out  bazel-squad-generator-xib  bazel-testlogs  profile.json
squad-generator-xib/: AppDelegate.swift  BUILD.bazel  Bazel-Info.plist  GoogleService-Info.plist  Info.plist  RootTabBar.xib  RootTabBarController.swift  SceneDelegate.swift  ViewController.swift
squad-generator-xib.xcodeproj/: project.pbxproj
squad-generator-xib.xcodeproj/xcuserdata/adhamfarid.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
squad-generator-xib.xcodeproj/xcuserdata/adhamfarid.xcuserdatad/xcschemes/: xcschememanagement.plist
squad-generator-xib.xcworkspace/: contents.xcworkspacedata
squad-generator-xib/Modules/BookNotification/: BookNotificationService.swift
squad-generator-xib/Modules/Chats/: BUILD.bazel  ChatEntity.swift  ChatPresenter.swift  ChatRouter.swift  ChatViewController.swift  ChatViewController.xib
squad-generator-xib/Modules/Chats/components/: ChatCellTableViewCell.swift  ChatCellTableViewCell.xib
squad-generator-xib/Modules/Login/: BiometricConfig.swift  LoginVC.swift
squad-generator-xib/Modules/NameGenerator/: BUILD.bazel  GeneratorEntity.swift  GeneratorInteractor.swift  GeneratorPresenter.swift  GeneratorRouter.swift  Main.xib  ViewController.swift
squad-generator-xib/Modules/Profile/: ProfileVC.swift
squad-generator-xib/Modules/Timer/: BUILD.bazel  TimerViewController.swift  TimerViewController.xib
