load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "lib",
    module_name = "App",
    srcs = glob([
        "*.swift",
        "Modules/NameGenerator/*.swift",
        "Modules/Timer/*.swift"
        ]),
    visibility = ["//visibility:private"],
    data = [
        "Modules/NameGenerator/Main.xib",
        "Modules/Timer/TimerViewController.xib",
        "RootTabBar.xib",
    ]
)

ios_application (
    name = "App",
    deps = [":lib"],
    bundle_id = "com.letstrysomethingnew.squad-generator-xib",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
   resources = glob([
    "Assets.xcassets/**",
    "**/*.xib",
]),
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"]
)