load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

# these are only the static file
filegroup(
    name = "shared_resources",
    srcs = glob([
        "Assets.xcassets/**",
        "RootTabBar.xib"
    ]),
    visibility = ["//visibility:public"]
)

filegroup(
    name = "base_infoplist",
    srcs = ["Bazel-Info.plist"],
    visibility = ["//visibility:public"],
)

# this will compile codes
filegroup( 
    name = "app_core_library",
    srcs = [
        "AppDelegate.swift",
        "SceneDelegate.swift",
        "RootTabBarController.swift",
    ],
    visibility = ["//visibility:public"],
)