load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

config_setting(
    name = "chats_on",
    define_values = {"chats_feature": "on"},
)


FEATURE_COPTS = select({
    ":chats_on": ["-DCHATS_FEATURE_ON"],
    "//conditions:default": [],
})

swift_library(
    name = "lib",
    module_name = "App",
    srcs = glob([
        "*.swift",
        "components/*.swift"
    ]) + ["//squad-generator-xib:app_core_library"],
    visibility = ["//visibility:private"],
    data = [
        "ChatViewController.xib",
        "components/ChatCellTableViewCell.xib"
    ],
    copts = FEATURE_COPTS,
)


ios_application (
    name = "App",
    deps = [
        ":lib",
        "//squad-generator-xib:shared_resources",
        ],
    bundle_id = "com.letstrysomethingnew.squad-generator-xib",
    families = [
        "iphone"
    ],
    infoplists = ["//squad-generator-xib:base_infoplist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"],

)

