load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")


# should be in base file
config_setting(
    name = "generator_on",
    define_values = {"generator_feature": "on"},
)


FEATURE_COPTS = select({
    ":generator_on": ["-DGENERATOR_FEATURE_ON"],
    "//conditions:default": [],
})

# i think that this will only executed once
swift_library(
    name = "lib",
    module_name = "App",
    srcs = glob(["*.swift"]) + ["//squad-generator-xib:app_core_library"],
    visibility = ["//visibility:private"],
    data = [
        "Main.xib"
    ],
    copts = FEATURE_COPTS,
)


ios_application (
    name = "App",
    deps = [
        ":lib",
        "//squad-generator-xib:shared_resources",
        ],
    bundle_id = "com.letstrysomethingnew.squad-generator-xib",
    families = [
        "iphone"
    ],
    infoplists = ["//squad-generator-xib:base_infoplist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"],

)

