load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "lib",
    module_name = "App",
    srcs = glob([
        "*.swift"
        ]),
    visibility = ["//visibility:private"],
    data = [
        # "Modules/NameGenerator/Main.xib",
        "TimerViewController.xib"
    ]
)

ios_application (
    name = "App_Timer",
    deps = [
        ":lib",
        "//squad-generator-xib:shared_resources"
        ],
    bundle_id = "com.letstrysomethingnew.squad-generator-xib",
    families = [
        "iphone"
    ],
    infoplists = ["//squad-generator-xib:base_infoplist"],
    # resources = glob([
    #     "**/*.xib",
    # ]),
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"]
)