load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_swift//swift:swift.bzl", "swift_library")

config_setting(
    name = "timer_on",
    define_values = {"timer_feature": "on"},
)


FEATURE_COPTS = select({
    ":timer_on": ["-DTIMER_FEATURE_ON"],
    "//conditions:default": [],
})

swift_library(
    name = "lib",
    module_name = "App",
    srcs = glob(["*.swift"]) + ["//squad-generator-xib:app_core_library"],
    visibility = ["//visibility:private"],
    data = [
        "TimerViewController.xib"
    ]
)

ios_application (
    name = "App",
    deps = [
        ":lib",
        "//squad-generator-xib:shared_resources"
        ],
    bundle_id = "com.letstrysomethingnew.squad-generator-xib",
    families = [
        "iphone"
    ],
    infoplists = ["//squad-generator-xib:base_infoplist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"]
)